--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,11 +9,11 @@ readme = "README.md"
 python = "^3.10"
 
 aiomysql = "^0.2.0"
-click = "^8.1.7"
+pydantic = "^2.8.0"
 python-dotenv = "^1.0.1"
 sqlalchemy = "^2.0.31"
+typer = "^0.12.3"
 uvloop = "^0.19.0"
-pydantic = "^2.8.0"
 
 [tool.poetry.scripts]
 gogol-pin = "gogol_pin.__main__:cli"
