Add SMTPExporter to send emails with statistics

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,9 @@
 DATABASE_URI=mysql+aiomysql://user:password@host:port/database
+
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USERNAME=user
+SMTP_PASSWORD=password
+
+FROM_ADDR=example@email.com
+TO_ADDR=gogolkadr@mail.ru
